@@ -162,7 +162,7 @@ uint8_t HID_Host_ReceiveReportByID(USB_ClassInfo_HID_Host_t* const HIDInterfaceI
 	{
 		.bmRequestType = (REQDIR_HOSTTODEVICE | REQTYPE_CLASS | REQREC_INTERFACE),
 		.bRequest      = REQ_SetReport,
-		.wValue        = ReportID,
+		.wValue        = (REPORT_ITEM_TYPE_In << 8) | ReportID,
 		.wIndex        = HIDInterfaceInfo->State.InterfaceNumber,
 		.wLength       = USB_GetHIDReportSize(HIDInterfaceInfo->Config.HIDParserData, ReportID, REPORT_ITEM_TYPE_In),
 	};
@@ -249,7 +249,7 @@ uint8_t HID_Host_SendReportByID(USB_ClassInfo_HID_Host_t* const HIDInterfaceInfo
 			.bmRequestType = (REQDIR_HOSTTODEVICE | REQTYPE_CLASS | REQREC_INTERFACE),
 			.bRequest      = REQ_SetReport,
 #if !defined(HID_HOST_BOOT_PROTOCOL_ONLY)
-			.wValue        = ReportID,
+			.wValue        = (REPORT_ITEM_TYPE_Out << 8) | ReportID,
 #else
 			.wValue        = 0,
 #endif
